--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "http": "0.0.0",
+    "send": "^0.13.2",
     "socket.io": "^1.3.5"
   }
 }
